package com.javarush.games.threeinrow;

public enum Elements {Fire, Ice, Nature, Holy, Dark}

