package com.javarush.games.threeinrow;

import com.javarush.engine.cell.Game;

public class ThreeInRowGame extends Game {
}
